sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:7: error: not found: value i
    if (i==0) {
        ^AlgGnomeSort:8: error: not found: value i
      i+=1
      ^AlgGnomeSort:10: error: not found: value i
    if (i=a-1) {
        ^AlgGnomeSort:13: error: not found: value i
    if (!plusPetit(i,i+1)) {
                   ^AlgGnomeSort:13: error: not found: value i
    if (!plusPetit(i,i+1)) {
                     ^AlgGnomeSort:14: error: not found: value i
      echange(i,i+1)
              ^AlgGnomeSort:14: error: not found: value i
      echange(i,i+1)
                ^AlgGnomeSort:15: error: not found: value i
      i-=1
      ^AlgGnomeSort:18: error: not found: value i
      i+=1
      ^